incorrectly evaluating positions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/build/main_debug",
-            "args": ["-d", "3"],
+            "args": ["-d", "3", "-t", "1"],
             "cwd": "${workspaceFolder}"
         }
     ]
